--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agnes-bot-pro",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -37,7 +37,9 @@
     "zustand": "^4.5.4",
     "recharts": "^2.12.7",
     "react-hot-toast": "^2.4.1",
-    "@tanstack/react-query": "^4.29.0"
+    "@tanstack/react-query": "^4.29.0",
+    "lightweight-charts": "^4.1.3",
+    "crypto-browserify": "^3.12.0"
   },
   "devDependencies": {
     "typescript": "^5",
