--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-hot-toast": "^2.4.1",
     "@tanstack/react-query": "^4.29.0",
     "lightweight-charts": "^4.1.3",
-    "crypto-browserify": "^3.12.0"
+    "crypto-browserify": "^3.12.0",
+    "stream-browserify": "^3.0.0",
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
     "typescript": "^5",
