🔧 CONFIG: Update environment variables to match all trading platforms

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
-# Database
+# ===== CORE APPLICATION =====
+NODE_ENV="development"
+APP_URL="http://localhost:3000"
+APP_NAME="Agnes Bot Pro"
+
+# ===== DATABASE =====
 DATABASE_URL="postgresql://username:password@localhost:5432/agnes_bot_pro"
 
-# NextAuth.js
+# ===== AUTHENTICATION =====
 NEXTAUTH_URL="http://localhost:3000"
-NEXTAUTH_SECRET="your-secret-key-here"
+NEXTAUTH_SECRET="your-secret-key-here-min-32-chars"
 
 # OAuth Providers
 GITHUB_CLIENT_ID="your-github-client-id"
@@ -11,37 +16,125 @@ GITHUB_CLIENT_SECRET="your-github-client-secret"
 GOOGLE_CLIENT_ID="your-google-client-id"
 GOOGLE_CLIENT_SECRET="your-google-client-secret"
 
-# Stripe
+# ===== PAYMENTS =====
 STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_PUBLISHABLE_KEY="pk_test_..."
 STRIPE_WEBHOOK_SECRET="whsec_..."
 
-# Email Configuration
+# ===== EMAIL =====
 EMAIL_SERVER_HOST="smtp.gmail.com"
 EMAIL_SERVER_PORT="587"
 EMAIL_SERVER_USER="your-email@gmail.com"
 EMAIL_SERVER_PASSWORD="your-app-password"
 EMAIL_FROM="noreply@yourdomain.com"
 
-# Trading APIs
-APEX_API_KEY="your-apex-api-key"
-APEX_API_SECRET="your-apex-api-secret"
-APEX_API_URL="https://api.apextrading.com"
+# ===== CRYPTO TRADING PLATFORMS =====
 
-NINJA_TRADER_API_URL="http://localhost:8080"
-NINJA_TRADER_API_KEY="your-ninja-trader-key"
+# Binance (Spot & Futures)
+BINANCE_TESTNET_API_KEY="your-binance-testnet-key"
+BINANCE_TESTNET_SECRET="your-binance-testnet-secret"
+BINANCE_LIVE_API_KEY="your-binance-live-key"
+BINANCE_LIVE_SECRET="your-binance-live-secret"
 
-# Market Data
+# Bybit (Derivatives & Spot)
+BYBIT_TESTNET_API_KEY="your-bybit-testnet-key"
+BYBIT_TESTNET_SECRET="your-bybit-testnet-secret"
+BYBIT_LIVE_API_KEY="your-bybit-live-key"
+BYBIT_LIVE_SECRET="your-bybit-live-secret"
+
+# Coinbase Pro
+COINBASE_API_KEY="your-coinbase-key"
+COINBASE_API_SECRET="your-coinbase-secret"
+COINBASE_PASSPHRASE="your-coinbase-passphrase"
+COINBASE_SANDBOX="true"
+
+# Kraken
+KRAKEN_API_KEY="your-kraken-key"
+KRAKEN_API_SECRET="your-kraken-secret"
+
+# ===== TRADITIONAL TRADING PLATFORMS =====
+
+# Tradovate (Futures)
+TRADOVATE_DEMO_API_URL="https://demo-api.tradovate.com"
+TRADOVATE_LIVE_API_URL="https://api.tradovate.com"
+TRADOVATE_USERNAME="your-tradovate-username"
+TRADOVATE_PASSWORD="your-tradovate-password"
+TRADOVATE_CID="your-tradovate-cid"
+TRADOVATE_SEC="your-tradovate-sec"
+
+# NinjaTrader (Simulation & Live)
+NINJATRADER_API_URL="http://localhost:8080"
+NINJATRADER_API_KEY="your-ninja-trader-key"
+NINJATRADER_ACCOUNT="your-account-name"
+
+# Interactive Brokers (Future support)
+IB_GATEWAY_HOST="127.0.0.1"
+IB_GATEWAY_PORT="7497"
+IB_CLIENT_ID="1"
+
+# ===== MARKET DATA PROVIDERS =====
+
+# CoinGecko (Crypto market data)
+COINGECKO_API_KEY="your-coingecko-pro-key"
+
+# CoinMarketCap (Crypto analytics)
+CMC_API_KEY="your-coinmarketcap-key"
+
+# CoinGlass (Derivatives analytics)
+COINGLASS_API_KEY="your-coinglass-key"
+
+# RWA.xyz (Real World Assets)
+RWA_API_KEY="your-rwa-key"
+
+# Alpha Vantage (Traditional markets)
 ALPHA_VANTAGE_API_KEY="your-alpha-vantage-key"
+
+# IEX Cloud (Stock data)
 IEX_CLOUD_API_KEY="your-iex-cloud-key"
 
-# Redis (Optional - for caching)
-REDIS_URL="redis://localhost:6379"
+# ===== TECHNICAL ANALYSIS =====
 
-# App Configuration
-APP_URL="http://localhost:3000"
-APP_NAME="Agnes Bot Pro"
+# TradingView (Charts & indicators)
+TRADINGVIEW_USERNAME="your-tradingview-username"
+TRADINGVIEW_PASSWORD="your-tradingview-password"
+
+# ===== INFRASTRUCTURE =====
+
+# Redis (Caching & real-time data)
+REDIS_URL="redis://localhost:6379"
 
 # File Upload
 UPLOADTHING_SECRET="sk_live_..."
-UPLOADTHING_APP_ID="your-app-id"
+UPLOADTHING_APP_ID="your-uploadthing-app-id"
+
+# ===== SECURITY & MONITORING =====
+
+# Encryption key for API credentials
+ENCRYPTION_KEY="your-32-char-encryption-key-here"
+
+# Rate limiting
+RATE_LIMIT_REDIS_URL="redis://localhost:6379"
+
+# Logging & monitoring
+LOG_LEVEL="info"
+SENTRY_DSN="your-sentry-dsn"
+
+# ===== DEVELOPMENT =====
+
+# Feature flags
+ENABLE_LIVE_TRADING="false"
+ENABLE_STRATEGY_AUTOMATION="true"
+ENABLE_NOTIFICATIONS="true"
+
+# Debug settings
+DEBUG_API_CALLS="false"
+DEBUG_TRADING="true"
+
+# ===== PRODUCTION OVERRIDES =====
+# These will be set differently in production
+
+# NEXTAUTH_URL="https://your-domain.com"
+# DATABASE_URL="postgresql://user:pass@prod-host:5432/agnes_bot_prod"
+# REDIS_URL="redis://prod-redis:6379"
+# ENABLE_LIVE_TRADING="true"
+# DEBUG_TRADING="false"
